--- a/page4.html
+++ b/page4.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="box1">
+        <div id="menubar">
+            <ul id="menu">
+                <li class="selected"> <a href="index.html">Acasă</a></li>
+                <li>Test</li>
+                <li>Test</li>
+            </ul>
+        </div>
+        <div id="content"></div>
+    </div>
 </body>
 </html>
