--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <body>
     <h1 id="titlu_principal">Cum să îți repari calculatorul?</h1> 
     <div id="box1">
-        <div id="menubar">
-            <ul id="menu">
-                <li class="selected"> <a href="index.html">Acasă</a></li>
-                <li>Test</li>
-                <li>Test</li>
-            </ul>
-        </div>
+	<ul>
+		<li id=li1><a id=a1 href="index.html">Acasa</a></li>
+		<li id=li1><a id=a1 href="news.asp">Test</a></li>
+		<li id=li1><a id=a1 href="about.asp">Test</a></li>
+		<li id=li1><a id=a1 href="contact.asp">Test</a></li>
+	</ul>
         <div id="content">
             <h4 id="titlu">Titlu de rezerva</h4>
             <p>Dacă ai un calculator, este posibil ca la un moment dat să întâmpini o problemă.Poate că nu se deschidea sau nu afișa nimic. Acest site are rolul de a identifica și rezolva câteva din problemele acestea.</p>
@@ -24,8 +23,11 @@
                 <li><a href="page2.html">Calculatorul nu se deschide</a></li>
                 <li><a href="page3.html">Calculatorul pornește, dar ecranul rămâne negru</a></li>
                 <li><a href="page4.html">Calculatorul repornește după o perioadă de timp</a></li>
-            </ul>
+            </ul> <!-- de modificat li id=li1 pentru ca se aliniaza link-urile de la probleme -->
         </div>
     </div>    
 </body>
 </html>
+<!--page2 va contine Daca nu se deschide calculatorul
+    page3 va contine daca se deschide si ramane imaginea neagra
+    page4 va contine daca calculatoru se inchide dupa o perioada de utilizare-->
