--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
     <div id="box1">
 	<ul>
 		<li id=li1><a id=a1 href="index.html">Acasa</a></li>
-		<li id=li1><a id=a1 href="news.asp">Test</a></li>
-		<li id=li1><a id=a1 href="about.asp">Test</a></li>
-		<li id=li1><a id=a1 href="contact.asp">Test</a></li>
+		<li id=li1><a id=a1 href="contact.html">Contact</a></li>
 	</ul>
         <div id="content">
-            <h4 id="titlu">Titlu de rezerva</h4>
-            <p>Dacă ai un calculator, este posibil ca la un moment dat să întâmpini o problemă.Poate că nu se deschidea sau nu afișa nimic. Acest site are rolul de a identifica și rezolva câteva din problemele acestea.</p>
-            <p>Mai jos veți întâlni câteva din probleme și o listă de rezolvări pentru acestea.</p>
+            <p>Dacă ai un calculator, este posibil ca la un moment dat să întâmpini o problemă.Poate că nu se deschide sau nu afișează nimic. Acest articol are rolul de a identifica și rezolva câteva din problemele întâlnite.</p>
+            <p>Mai jos veți întâlni câteva din probleme pe care le-am întâlnit și o câteva metode de rezolvări pentru acestea:</p>
             
             <ul id="probleme">
                 <li><a href="page2.html">Calculatorul nu se deschide</a></li>
