--- a/page2.html
+++ b/page2.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="titlu_principal">Calculatoru nu se deschide.</h1> 
-    <div id="box1">
+    <h1 id="titlu_principal">Calculatoru nu se deschide</h1> 
+    <div id="box2">
+        <ul>
+            <li id=li1><a id=a1 href="index.html">Acasa</a></li>
+            <li id=li1><a id=a1 href="contact.html">Contact</a></li>
+        </ul>
         <div id="content">
             <p>În acest caz vom trece prin mai multe rezolvări până când vom găsi soluția.</p>
             <h3>Soluția 1</h3>
@@ -17,7 +21,7 @@
             <img src="images/psubtn.jpg" height="100" width="200" title="poză cu sursa în poziția corectă">
             <p>Dacă butonul este în poziția corectă sau l-ați mutat în poziția corectă și calculatorul tot nu pornește vom încerca următoarea soluție.</p>
             <h3>Soluția 2</h3>
-            <p>Câteodată, butonul de pornire de pe carcasa calculatorului se poate strica sau conectorii lui să fie deconectați sau stricați. Primul pas este să deschidem panoul lateral al carcasei și să vedem ce placă de bază avem și modelul și să căutăm manualul de instrucțiuni, deoarece fiecare producător își poziționează pinii conectori pentru butoanele carcasei diferit. După ce am identificat cei doi pini, vom scoate firele și vom lua o șurubelniță sau orice alt material conducator de electricitate si îi vom scurtcircuita ca in imaginea de mai jos (această acțiune nu va produce efecte averse calculatorului dacă nu atingeți altceva).</p>
+            <p>Câteodată, butonul de pornire de pe carcasa calculatorului se poate strica sau conectorii lui să fie deconectați sau stricați. Primul pas este să deschidem panoul lateral al carcasei și să vedem ce placă de bază avem, modelul acesteia și să căutăm manualul de instrucțiuni, deoarece fiecare producător își poziționează pinii conectori pentru butoanele carcasei diferit. După ce am identificat cei doi pini, vom scoate firele și vom lua o șurubelniță sau orice alt material conducator de electricitate si îi vom scurtcircuita ca in imaginea de mai jos (această acțiune nu va produce efecte averse calculatorului dacă nu atingeți altceva).</p>
             <img src="images/screwdriver-shorting-PWR-SW-pins.jpg" height="150" width="300" title="șurubelniță care scurtcircuiteaza cei doi pini de pornire" height="" width="">
             <p>Chiar dacă această problemă este posibilă, este puțin probabil ca butonul să se strice.</p>
             <h3>Soluția 3</h3>
@@ -27,6 +31,8 @@
             <p>Dacă toate cablurile sunt introduse în conectori, va trebui să scoatem de pe placa de bază cel mai mare cablu (cel de 24 de pini) și să ne folosim încă odată de manualul de instrucțiuni al plăcii de baza sau de manualul de instrucțiuni al sursei și să identificăm pinul "COM" sau "Ground" și "PS_ON". Ei se află unul lângă celălalt.</p>
             <img src="images/24 pin.png" height="200" width="300" title="conector de 24 de pini">
             <p>Ceea ce urmează să facem este puțin mai periculos și nu este recomandat celor care nu au cunoștințe de acest gen. Va trebui să scurtcircuităm cei doi pini de mai sus. Pentru a fi siguri că nu vom atinge alți pini, există pe piață un adaptor care se conectează la acest cablu.</p>
-            <p>Motivul pentru care vrem să scurtcircuităm acești doi pini este pentru a vedea dacă sursa pornește. Dacă se aude un sunet cum ar fi atunci când apăsăm un buton, dar ventilatorul sursei nu se învârte, această sursă este stricată și va trebui să fie înlocuită.</p>
+            <p>Motivul pentru care vrem să scurtcircuităm acești doi pini este pentru a vedea dacă sursa pornește. Dacă se aude un sunet cum ar fi atunci când apăsăm un buton, dar ventilatorul sursei nu se învârte, această sursă este stricată și va trebui să fie înlocuită. În acest moment, recomand să duceți calculatorul la o persoană de specialitate care are experiența necesară.</p>
+        </div> 
+    </div> 
     </body>
 </html>
