--- a/page4.html
+++ b/page4.html
@@ -8,7 +8,21 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="titlu_principal">Calculatoru se restartează după o perioadă de utilizare</h1>
      <div id="box1">
+        <ul>
+            <li id=li1><a id=a1 href="index.html">Acasa</a></li>
+            <li id=li1><a id=a1 href="contact.html">Contact</a></li>
+        </ul>
+        <div id="content">
+            <p>Aceasta este ultima problemă pe care am întâlnit-o. Cauza ei este supraîncălzirea procesorului. Atunci când procesorul calculatorului nu este răcit adecvat și atinge temperaturi destul de ridicate (peste 100℃), el își efectuează un restart forțat pentru a răci, înainte ca procesorul să se strice.</p>
+            <p>Primul pas este de a ne asigura ca ventilatoarele atașate de carcasă nu sunt pline de praf. Praful poate cauza un flux scăzut de aer în interiorul carcasei care aduce de la sine temperaturi ridicate. După curățarea acestora, vedeți dacă problema încă persistă.</p>
+            <img src="images/radiator.png" height="400" width="400" title="poză radiator procesor împreună cu șuruburile și cablul ventilatorului">
+            <p>Dacă nimic nu s-a schimbat, va trebui să schimbăm pasta termoconductoare care se află între radiatorul care se află peste procesor și procesor. Primul pas este de a scoate cele două panouri laterale ale carcasei. Radiatorul are peste el atașat un ventilator. Vom urma cablul care pleacă de la ventilator și îl vom desconecta de la placa de bază (nu uitați să țineți minte de unde l-ați scos). Radiatorul este prins de placa de bază cu patru șuruburi. Le vom desfileta și cu mare atenție vom trage de el în timp ce îl învârtim ca să nu iasă și procesorul. Cu un șervețel îmbibat in alcool (recomand alcool izopropilic, dar orice alcool sanitar este bun) vom șterge radiatorul și procesorul de pasta veche. Pentru o pastă nouă, eu am folosit pasta termoconductoare produsa de Arctic, modelul MX-6.</p>
+            <p>Vom aplica pe procesor pastă termoconductoare cât de mărimea unui bob de mazăre și vom așeza radiatorul peste acesta. Cu o mână vom ține de plăcuța care se află pe spatele plăcii de bază, iar cu cealaltă vom înșuruba, în formă de X (vom strânge șuruburile din colțuri opuse), câte puțin, fiecare șurub până când credem că se aplică o forță egală și destul de moderată între radiator și procesor.</p>
+            <p>Vom continua prin conectarea firului ventilatorului în aceeași locație de unde a fost scos.</p>
+            <p>După această operațiune, calculatorul nu ar mai trebui să se redeshidă singur.</p>
+        </div>
 	</div>
 </body>
 </html>
