Corectare pagina contact

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="box1">
 	<ul>
 		<li id=li1><a id=a1 href="index.html">Acasa</a></li>
-		<li id=li1><a id=a1 href="contact.html">Contact</a></li>
+		<li id=li1><a id=a1 href="contactg.html">Contact</a></li>
 	</ul>
         <div id="content">
             <p>Dacă ai un calculator, este posibil ca la un moment dat să întâmpini o problemă.Poate că nu se deschide sau nu afișează nimic. Acest articol are rolul de a identifica și rezolva câteva din problemele întâlnite.</p>
