--- a/contactg.html
+++ b/contactg.html
@@ -10,17 +10,17 @@
     <div id="box1">
 	<ul>
 		<li id=li1><a id=a1 href="index.html">Acasa</a></li>
-		<li id=li1><a id=a1 href="contactg.html">Contact</a></li>
+		<li id=li1><a id=a1 href="contact.html">Contact</a></li>
 	</ul>
-    <div id="content">
-        <p>Pentru a mă contacta cu alte probleme pe care le aveți, mă puteți găsi pe:</p>
+    </div>
+    <div id="content1">
+        <p style="font-size: 30px; font-family: sans-serif;">Pentru a mă contacta cu alte probleme pe care le aveți, mă puteți găsi pe:</p>
         <ul>
             <li><a target="_blank" style="font-size: 30px; color: blue;" href="https://www.facebook.com/stefan.rotariu.75">Facebook</a></li>
             <li><a target="_blank" style="font-size: 30px; color: rgb(214,41,118);" href="https://www.instagram.com/stefanrotariu_/">Instagram</a></li>
             <li><a target="_blank" style="font-size: 30px; color: rgb(94, 94, 94);" href="https://github.com/Emcidy">Github</a></li>
             <li><a target="_blank" style="font-size: 30px; color: rgb(252, 62, 62);" href="mailto:stefan.rotariu.lucian@gmail.com">stefan.rotariu.lucian@gmail.com</a></li>
         </ul>
-    </div>
-    </div>    
+    </div>   
 </body>
 </html>
