--- a/contactg.html
+++ b/contactg.html
@@ -10,7 +10,7 @@
     <div id="box1">
 	<ul>
 		<li id=li1><a id=a1 href="index.html">Acasa</a></li>
-		<li id=li1><a id=a1 href="contact.html">Contact</a></li>
+		<li id=li1><a id=a1 href="contactg.html">Contact</a></li>
 	</ul>
     </div>
     <div id="content1">
