--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<li id=li1><a id=a1 href="contactg.html">Contact</a></li>
 	</ul>
         <div id="content">
-            <p>Dacă ai un calculator, este posibil ca la un moment dat să întâmpini o problemă.Poate că nu se deschide sau nu afișează nimic. Acest articol are rolul de a identifica și rezolva câteva din problemele întâlnite.</p>
-            <p>Mai jos veți întâlni câteva din probleme pe care le-am întâlnit și o câteva metode de rezolvări pentru acestea:</p>
+            <p>Dacă ai un calculator, este posibil ca la un moment dat să întâmpini o problemă. Poate că nu se deschide sau nu afișează nimic. Acest articol are rolul de a identifica și rezolva câteva din problemele întâlnite.</p>
+            <p>Mai jos veți întâlni câteva din problemele pe care le-am întâlnit și câteva metode de rezolvări pentru acestea:</p>
             
             <ul id="probleme">
                 <li><a href="page2.html">Calculatorul nu se deschide</a></li>
