--- a/page3.html
+++ b/page3.html
@@ -12,10 +12,10 @@
     <div id="box1">
         <ul>
             <li id=li1><a id=a1 href="index.html">Acasa</a></li>
-            <li id=li1><a id=a1 href="contact.html">Contact</a></li>
+            <li id=li1><a id=a1 href="contactg.html">Contact</a></li>
         </ul>
         <div id="content">
-            <p>Pentru această problemă, eu am găsit două rezolvări, destul de simple. Este posibil ca unul sau mai multe module RAM să fie stricate și să fie înlocuite. Ca în imaginea de jos, pe fiecare parte a unui modul o să fie două leviere care se pot coborî (pe unele plăci de bază există doar un astfel de levier). Odată apăsate, puteți să trageți modulul RAM afară. O să repetați această acțiune pentru toate modulele în caz de aveți mai multe.</p>
+            <p>Pentru această problemă, eu am găsit două rezolvări, destul de simple. Este posibil ca unul sau mai multe module RAM să fie stricate și vor trebui să fie înlocuite. Ca în imaginea de jos, pe fiecare parte a unui modul o să fie două leviere care se pot coborî (pe unele plăci de bază există doar un astfel de levier). Odată apăsate, puteți să trageți modulul RAM afară. O să repetați această acțiune pentru toate modulele în caz de aveți mai multe.</p>
             <img src="images/ram.png" height="288" width="390" title="poză RAM">
             <p>Acum introduceți doar un modul și verificați dacă atunci când porniți calculatorul dacă se afișează o imagine pe ecran. Dacă tot nu pornește monitorul repetați pasul de mai sus, dar schimbați locația unde introduceți modulul RAM.</p>
             <p>Dacă după toate posibilitățile de combinare nu rezultă într-o imagine pe ecran, putem să deducem două concluzii.</p>
