--- a/page2.html
+++ b/page2.html
@@ -8,27 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="titlu_principal">Calculatoru nu se deschide</h1> 
-    <div id="box2">
+    <h1 id="titlu_principal">Calculatoru nu vrea să se deschidă</h1> 
+    <div id="box1">
         <ul>
             <li id=li1><a id=a1 href="index.html">Acasa</a></li>
-            <li id=li1><a id=a1 href="contact.html">Contact</a></li>
+            <li id=li1><a id=a1 href="contactg.html">Contact</a></li>
         </ul>
         <div id="content">
-            <p>În acest caz vom trece prin mai multe rezolvări până când vom găsi soluția.</p>
+            <p>În acest caz vom trece prin mai multe rezolvări până când vom găsi soluția problemei.</p>
             <h3>Soluția 1</h3>
-            <p>Prima dată verificăm dacă sursa calculatorului este pornită. Pentru asta vom întoarce calculatorul si verificăm că butonul de pe sursă este în poziția corectă.</p>
+            <p>Prima dată verificăm dacă sursa calculatorului este pornită. Pentru asta vom întoarce calculatorul și verificăm dacă butonul de pe sursă este în poziția corectă.</p>
             <img src="images/psubtn.jpg" height="100" width="200" title="poză cu sursa în poziția corectă">
             <p>Dacă butonul este în poziția corectă sau l-ați mutat în poziția corectă și calculatorul tot nu pornește vom încerca următoarea soluție.</p>
             <h3>Soluția 2</h3>
-            <p>Câteodată, butonul de pornire de pe carcasa calculatorului se poate strica sau conectorii lui să fie deconectați sau stricați. Primul pas este să deschidem panoul lateral al carcasei și să vedem ce placă de bază avem, modelul acesteia și să căutăm manualul de instrucțiuni, deoarece fiecare producător își poziționează pinii conectori pentru butoanele carcasei diferit. După ce am identificat cei doi pini, vom scoate firele și vom lua o șurubelniță sau orice alt material conducator de electricitate si îi vom scurtcircuita ca in imaginea de mai jos (această acțiune nu va produce efecte averse calculatorului dacă nu atingeți altceva).</p>
+            <p>Câteodată, butonul de pornire de pe carcasa calculatorului se poate strica sau conectorii lui să fie deconectați sau stricați. Primul pas este să deschidem panoul lateral al carcasei și să vedem ce placă de bază avem, modelul acesteia și să căutăm manualul de instrucțiuni, deoarece fiecare producător își poziționează pinii conectori pentru butoanele carcasei diferit. După ce am identificat cei doi pini, vom scoate firele și vom lua o șurubelniță sau orice alt material conductor de electricitate și îi vom scurtcircuita ca în imaginea de mai jos (această acțiune nu va produce efecte averse calculatorului dacă nu atingeți altceva).</p>
             <img src="images/screwdriver-shorting-PWR-SW-pins.jpg" height="150" width="300" title="șurubelniță care scurtcircuiteaza cei doi pini de pornire" height="" width="">
             <p>Chiar dacă această problemă este posibilă, este puțin probabil ca butonul să se strice.</p>
             <h3>Soluția 3</h3>
             <p>Această soluție o să fie singura care s-ar putea să coste bani, deoarece este posibil ca sursa să fie stricată, dar prima dată verificăm dacă toți conectorii de acest fel (poza de mai jos) sunt conectati la un cablu al sursei.</p>
             <img src="images/pins.jpg" title="tipi de conectori de pe placa de baza 2*2, 2*3, 2*4">
             <p>Dacă găsim un astfel de conector fără un cablu conectat la el, vom deschide celălalt panou lateral al carcasei și vom căuta un cablu de aceeași dimensiune(4 pini, 6 pini, 8 pini) si îl vom introduce în conector.</p>
-            <p>Dacă toate cablurile sunt introduse în conectori, va trebui să scoatem de pe placa de bază cel mai mare cablu (cel de 24 de pini) și să ne folosim încă odată de manualul de instrucțiuni al plăcii de baza sau de manualul de instrucțiuni al sursei și să identificăm pinul "COM" sau "Ground" și "PS_ON". Ei se află unul lângă celălalt.</p>
+            <p>Dacă toate cablurile sunt introduse în conectori, va trebui să scoatem de pe placa de bază cel mai mare cablu (cel de 24 de pini) și să ne folosim încă odată de manualul de instrucțiuni al plăcii de baza sau de manualul de instrucțiuni al sursei și să identificăm pinul "COM" sau "Ground" și pinul "PS_ON". Ei se află unul lângă celălalt.</p>
             <img src="images/24 pin.png" height="200" width="300" title="conector de 24 de pini">
             <p>Ceea ce urmează să facem este puțin mai periculos și nu este recomandat celor care nu au cunoștințe de acest gen. Va trebui să scurtcircuităm cei doi pini de mai sus. Pentru a fi siguri că nu vom atinge alți pini, există pe piață un adaptor care se conectează la acest cablu.</p>
             <p>Motivul pentru care vrem să scurtcircuităm acești doi pini este pentru a vedea dacă sursa pornește. Dacă se aude un sunet cum ar fi atunci când apăsăm un buton, dar ventilatorul sursei nu se învârte, această sursă este stricată și va trebui să fie înlocuită. În acest moment, recomand să duceți calculatorul la o persoană de specialitate care are experiența necesară.</p>
